# whl-copy

./: README.md  pyproject.toml
autocopy_tool/: config.yml  main.py
autocopy_tool/modules/: checksum.py  filters.py  local_transfer.py  rsync_transfer.py  scanner.py
autocopy_tool/utils/: logger.py  time_utils.py
tests/: test_checksum.py  test_endpoint_repository.py  test_filters.py  test_job_repository.py  test_main.py  test_preset_repository.py  test_profile_store.py  test_rsync_transfer.py  test_scanner.py  test_source_scan_service.py  test_strategy_service.py  test_time_utils.py  test_transfer.py  test_transfer_storage.py  test_transport_service.py  test_wizard_arch.py  test_wizard_flow.py  test_workflow_state_repository.py
whl_copy/: __init__.py  config.yml  main.py  presets.yml  wizard.py
whl_copy/config/: config.yml  presets.yml
whl_copy/core/: __init__.py  checksum.py  destination_service.py  domain.py  endpoint_repository.py  job_repository.py  models.py  preset_repository.py  profile_store.py  scan_service.py  scanner.py  state_store.py  strategy_service.py  transport_service.py  workflow_state_repository.py
whl_copy/discovery/: __init__.py  base.py  local.py  network.py  registry.py  static.py
whl_copy/modules/: __init__.py  address_discovery.py  checksum.py  filters.py  local_transfer.py  rsync_transfer.py  scanner.py
whl_copy/policies/: __init__.py
whl_copy/storage/: __init__.py  base.py  bos.py  local.py  operations.py  registry.py  rsync.py
whl_copy/utils/: __init__.py  interaction.py  logger.py  size_parser.py  time_utils.py
(+2 files in other folders)
